fix 'quote' author to be larger font and squish quote section inwards

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ button {
 
 .quote-section {
   background-color: #E5E7EB;
-  padding: 16px 20%;
+  padding: 16px 25%;
 }
 
 .quote-section .text {
@@ -92,7 +92,10 @@ button {
 }
 
 .quote-section .quote {
+  font-size: 36px;
+  font-weight: 600;
   text-align: right;
+  margin-top: -36px;
 }
 
 .call-to-action {
